[gd_scene load_steps=6 format=3 uid="uid://2c7ivlwkgvw2"]

[ext_resource type="Script" uid="uid://cb32aakt0k3ox" path="res://scripts/player.gd" id="1_3vyb7"]
[ext_resource type="AudioStream" uid="uid://cx08t17wk3vv5" path="res://assets/space invaders player firing.wav" id="2_g2els"]
[ext_resource type="AudioStream" uid="uid://i4qemqlamf4h" path="res://assets/asteroids warp sound.wav" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://cplrrxhjty2y8" path="res://assets/asteroids shotgun sound.wav" id="4_dqkch"]
[ext_resource type="AudioStream" uid="uid://c0xfkp2xm4n1e" path="res://assets/space invaders explosion.wav" id="6_tuyoq"]

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_3vyb7")

[node name="Line2D" type="Line2D" parent="."]
z_index = 1
position = Vector2(0, 5)
points = PackedVector2Array(-6, 0, 0, -13, 6, 0)
closed = true
width = 1.0
joint_mode = 2
end_cap_mode = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(0, 0.66666603)
polygon = PackedVector2Array(0, -8.666666, 6, 4.3333335, -6, 4.3333335)

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -5)

[node name="EngineLines" type="Line2D" parent="."]
points = PackedVector2Array(-3, 5, -2, 8, -1, 7, 0, 13, 1, 7, 2, 8, 3, 5, -3, 5)
closed = true
width = 1.0
sharp_limit = 10.0

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_g2els")

[node name="WarpSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qhqgy")

[node name="ShotgunSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_dqkch")

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tuyoq")
